Fixed footer position to absolute. Fixed login loader issue on smaller views

--- a/app/app.css
+++ b/app/app.css
@@ -10,6 +10,7 @@
 footer {
   padding: 0em 0.5em;
   font-size: 0.7em;
+  position: absolute;
 }
 /* index - END */
 
